done add auth to mongoDB
